Hiding textfield when focused for #116, tested on ios8.4 but has potential to prevent editing elsewhere

--- a/assets/css/editor.css.styl
+++ b/assets/css/editor.css.styl
@@ -292,4 +292,9 @@ textarea.fabric-hidden-input
   left 50% !important
   color rgba(0,0,0,0)
   opacity 0.0
+  outline none
   // filter alpha(opacity=00)
+  &:focus
+    visibility hidden
+    outline-color transparent
+    outline-style none
